--- a/pom.xml
+++ b/pom.xml
@@ -62,8 +62,18 @@
     <dependency>
 	    <groupId>tech.grasshopper</groupId>
 	    <artifactId>extentreports-cucumber6-adapter</artifactId>
-	    <version>2.5.0</version>
+	    <version>2.6.0</version>
 	    <scope>test</scope>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.pdfbox</groupId>
+	    <artifactId>pdfbox</artifactId>
+	    <version>2.0.29</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.github.vandeseer</groupId>
+	    <artifactId>easytable</artifactId>
+	    <version>0.8.5</version>
 	</dependency>
  	<dependency>
         <groupId>com.github.ralfstuckert.pdfbox-layout</groupId>
@@ -88,7 +98,18 @@
 			<groupId>org.apache.maven.plugins</groupId>
     		<artifactId>maven-surefire-plugin</artifactId>
    			<version>${maven.surefire.version}</version>
+   			<configuration>
+				   <includes>
+					   <include>**/SauceDemoTestRunner.java</include>
+				   </includes>
+				   <parallel>methods</parallel>
+				   <threadCount>4</threadCount>
+				   <useUnlimitedThreads>false</useUnlimitedThreads>
+			   </configuration>
 		</plugin>
+		
+
+		
 	</plugins>
   </build>
 </project>
